# kokoro

./: .gitignore  Cargo.toml
src/: lib.rs  voice.rs
